--- a/app/src/PokemonList/PokemonList.html
+++ b/app/src/PokemonList/PokemonList.html
@@ -1,5 +1,25 @@
-<div class="list-group">
 
-    <pokemon-list-item pokemon="singlePokemon" ng-repeat="singlePokemon in $ctrl.pokemons"></pokemon-list-item>
+<div ng-cloak="" layout-gt-sm="row" layout="column" >
 
+  <div flex-gt-sm="50" flex="">
+
+    <md-toolbar layout="row" class="md-hue-1"> 
+      <div class="md-toolbar-tools">
+        <span>{{$ctrl.fix.head}}</span>
+      </div>
+    </md-toolbar>
+
+      <md-list flex="">    
+        <md-subheader class="md-no-sticky">{{$ctrl.fix.subhead}}</md-subheader>
+        <md-list-item class="md-1-line" ng-repeat="item in $ctrl.pokemons" ng-click="$ctrl.goPokemon(item.objectId)">  
+            <div class="md-list-item-text" layout="column"> 
+                <h3>{{ item.name }}</h3>
+            </div>
+            <md-divider></md-divider>     
+        </md-list-item>
+      </md-list>
+    
+    </div>
 </div>
+
+
